Small.html file added

--- a/Small.html
+++ b/Small.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to HTML</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore quae totam nisi ipsa quod impedit provident doloremque harum molestias, tempora iusto, nobis, ducimus necessitatibus! Consequatur pariatur dolores hic aperiam accusamus?</p>
 </body>
 </html>
